--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -6,6 +6,11 @@
     <title>HTML Assignment - verd0035</title>
 </head>
 <body>
-    Danika Verdon
+<header> Danika Verdon </header> 
+<article><h2>About me</h2></article>
+<p>Hello my name is <abbr title="Dangerous Awesome Nice Killer Adventurous">Danika</abbr>Verdon, I enjoy reading and taking pictures. I first found my love for photography when my mothers boyfriend bought me my first camera. I enjoy reading romantic novels and love anything that involves conspiracies about what society could potentially be. I also love traveling and have been to lots of places around Canada, Europe, Dominican, Cuba and Florida.</p>
+<p>A little more about myself, I grew up in Orleans and went to primary school at Arc en ciel and went to high school at Beatrice Desloges and decided to come to Algonquin as I thought it was the best choice for my future. I have 3 sisters and my parents are divorced. I also have a dog named Kenya. She is 5 years old and her birthday is October 25<sup>th</sup>.</p>
+<blockquote><em><h4>You must be the change you want to see in the world</h4></em>-<cite>Mahatma Gantih</cite></blockquote>
+<footer>copyright © Danika Verdon</footer>
 </body>
 </html>
