--- a/midterm/index.html
+++ b/midterm/index.html
@@ -11,7 +11,6 @@
     <header>
         <h1>Lone Starfish</h1>
     </header>
-    </body>
     <nav>
     <ul class="nav">
           <li><a>Home</a></li>
@@ -19,10 +18,9 @@
           <li><a>Contract</a></li>
         </ul>
     </nav>
-        </div>
 <h4>Life of a Starfish</h4>
             <div class="box">
-                <img src="images/lone-starfish.jpg" width="190" height="190"  alt="image of lone-starfish" />
+                <img src="images/lone-starfish.jpg" width="190" height="190"  alt="image of lone-starfish">
                 <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
             </div>
             <h4>Facts About Strafish</h4>
@@ -41,8 +39,8 @@
                 <input id="fullname">
               </form>
               <form action="thanks.html" method="post">
-                <label for="fullname">Your Email</label>
-                <input id="fullname">
+                <label for="Email">Your Email</label>
+                <input id="Email">
               </form>
               <form action="thanks.html" method="post">
                 <label for="message">Your Message</label>
@@ -63,4 +61,5 @@
 </article>
 <footer>© Lone Starfish</footer>
 </section>
+</body>
 </html>
