--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -7,63 +7,99 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <nav>
+<div>
 <img src="images/logo.png" alt="logo" width="100" height="100">
 <h4>Home</h4>
-<h4>About Us</h4>
-<h4>Services</h4>
-<h4>Team</h4>
-<h4>Contact</h4>
+</div>
+<h4 style="color: orange;">About Us</h4>
+<h4 style="color: orange;">Services</h4>
+<h4 style="color: orange;">Team</h4>
+<h4 style="color: orange;">Contact</h4>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <form class="example" action="action_page.php">
     <input type="search" placeholder="Search" name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
-  <header>
-    <h1> To Three Star Media </h1>
-</header>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur, nisi aut aliquam unde tenetur, consequatur voluptatem dignissimos beatae minus praesentium dolorum! Architecto suscipit quod sit, sapiente rem incidunt non!</p>
+  </nav>
+
+<div class="background">
+  <div class="transbox">
+    <h1 style="color: white;">Welcome To Three</h1>
+    <h1 style="color: white;">Star Media</h1>
+    <h3 style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur, nisi aut aliquam unde tenetur, consequatur voluptatem dignissimos beatae minus praesentium dolorum! Architecto suscipit quod sit, sapiente rem incidunt non!</h3>
   <p>Connect with us<span style='font-size:20px;'>&#11208;</span></p>
-  <img src="images/about-us.jpg" alt="about-us" width="500" height="350">
+  </div>
+</div>
+
+<div id="about">
+  <img src="images/about-us.jpg" alt="about-us" width="1240px">
   <h2>About Us</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum animi repellendus ipsum veniam assumenda ut nobis iste, esse nemo nostrum nihil est maiores consectetur eveniet odio reiciendis delectus, exercitationem quas?</p>
-  <h2>Our Services</h2>
-  <img src="images/digital.jpg" alt="digital" width="500" height="350">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione rem earum asperiores quod temporibus similique, doloremque eius eveniet quaerat eligendi aspernatur vel ipsum quasi, aut quas quibusdam commodi ab ex.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore ipsum nemo quae! Ut nulla, quo facilis incidunt veritatis molestias ipsum perferendis a consequatur voluptas, quidem exercitationem obcaecati reprehenderit sapiente? Quasi.</p>
+</div>
+
+<h2>Our Service</h2>
+<div>
+  <img src="images/digital.jpg" alt="digital" width="1240px" >
   <h2>Digital Transformation</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, sed error est aliquid distinctio hic facilis numquam illo. Dolores cum voluptatum, laboriosam culpa dolorem alias ullam corporis cupiditate ipsa earum.</p>
-  <p>Digital Plans<span style='font-size:20px;'>&#11208;</span></p>
-  <img src="images2marketing.jpg" alt="marketing" width="500" height="350">
-  <h2>marketing</h1>
+  <h3>Digital Plans<span style='font-size:20px;'>&#11208;</span></h3>
+</div>
+
+<div>
+  <img src="images/marketing.jpg" alt="marketing" width="1240px">
+  <h2>marketing</h2>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla officia explicabo ratione exercitationem minus maiores. Quasi hic ut quam amet eveniet fuga dignissimos debitis, magnam beatae dolor aliquam eligendi reprehenderit?</p>
   <p>Marketing Plans<span style='font-size:20px;'>&#11208;</span></p>
-  <img src="images/video.jpg" alt="video" width="500" height="350">
+</div>
+
+<div>
+  <img src="images/video.jpg" alt="video" width="1240px">
   <h2>Video Production </h2>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus porro dolor quibusdam est consectetur cumque totam sunt quisquam perferendis magni beatae nulla alias dolorem, rerum odio quidem! Possimus, tempore maiores!</p>
   <p>Video Plans<span style='font-size:20px;'>&#11208;</span></p>
-  <img src="images/web.jpg" alt="web" width="500" height="350">
+</div>
+
+<div>
+  <img src="images/web.jpg" alt="web" width="1240px">
   <h2>Web Development</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quia quibusdam qui, incidunt recusandae corporis nemo adipisci quisquam itaque quam, suscipit ea dicta ipsum vero dolore quidem aut iste quaerat?</p>
   <p>Web Plans<span style='font-size:20px;'>&#11208;</span></p>
-  <img src="images/print.jpg" alt="print" width="500" height="350">
+  </div>
+
+<div>
+  <img src="images/print.jpg" alt="print" width="1240px">
   <h2>Print</h2>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit vitae quibusdam nulla numquam sunt, alias explicabo sed consequatur sit porro pariatur minus voluptatem laboriosam, beatae magnam excepturi quos officiis.</p>
   <p>Print Plans <span style='font-size:20px;'>&#11208;</span></p>
-  <h1>Our Vision</h1>
-<p style="background-image: url('images/vision.jpg');">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores officiis quas repudiandae distinctio fuga a cumque officia obcaecati velit accusamus voluptates, ducimus vel, modi ipsam, tempore eveniet libero possimus.
-</p>
+</div>
+
+<header>
+  <h1 style="color: white;">Our Vision</h1>
+<p> <h4 style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores officiis quas repudiandae distinctio fuga a cumque officia obcaecati velit accusamus voluptates, ducimus vel, modi ipsam, tempore eveniet libero possimus.</h4></p>
 <p>Learn More <span style='font-size:20px;'>&#11208;</span></p>
+</header>
+
+
 <h2>Our Team</h2>
-<img src="images/john.jpg" alt="john" width="500" height="350">
-<h1>John Doe</h1>
+<div>
+<img src="images/john.jpg" alt="john" width="1240px">
+<h2>John Doe</h2>
 <h5>CEO and Co-worker</h5>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero laboriosam molestiae magni. Suscipit, perferendis, reiciendis et odio illo quod sapiente earum consequatur provident itaque repellendus? Deleniti alias a earum incidunt.</p>
-<img src="images/bob.jpg" alt="bob" width="500" height="350">
-<h1>Bob Rite</h1>
+</div>
+
+<div>
+<img src="images/bob.jpg" alt="bob" width="1240px">
+<h2>Bob Rite</h2>
 <h5>CFO and Co-worker</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed error quam minima ut, laudantium nulla, totam architecto maiores aperiam quibusdam harum similique vel quas corporis tempore doloremque. Laboriosam, repellat similique.</p>
+</div>
+
 <h2>Contact Us</h2>
-<h1>Send us a message</h1>
-<h1>HTML Forms</h1>
+<h3>Send us a message</h3>
 <form action="/action_page.php">
   <label for="fname">Full Name:</label><br>
   <input type="text" id="fname" name="fname"><br>
@@ -73,7 +109,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores officiis
   <input type="text" id="lname" name="lname"><br><br>
   <input type="Submit" value="Submit">
 </form> 
-<h1>Hours of opertaion</h1>
+<h2>Hours of opertaion</h2>
 <table>
     <tr>
       <th>Days</th>
@@ -88,9 +124,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore maiores officiis
       <td>Closed</td>
     </tr>
   </table>  
-  <h1>Location</h1>
-  <p>&copy Copyright Three Star Media, 2023</p>
-  <p>All images are taken from Unspanish</p>
+  <h2>Location</h2>
 
+ <footer>
+  <h6 style="color: orange;">&copy Copyright Three Star Media, 2023</h6>
+  <h6 style="color: orange;">All images are taken from Unspanish</h6>
+ </footer>
 </body>
 </html>
