--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -125,6 +125,10 @@
     </tr>
   </table>  
   <h2>Location</h2>
+<iframe src="https://www.google.com/maps/dir/45.4619346,-75.4581504/Algonquin+College+%E2%80%93+Pembroke+Campus,+1+College+Way,+Pembroke,+ON,+K8A+0C8,+Frank+Nighbor+St,+Pembroke,+ON+K8A+0C8/@45.595138,-77.7392749,7.83z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x4cd13774ca07a887:0x4a356b02a0944a80!2m2!1d-77.1210946!2d45.8262822?entry=ttu"
+width="800" hight="500"
+style="border:0;" allowfullscreen="" loading="lazy"
+referrerpolicy="no-referrer-when-downgrade"></iframe>
 
  <footer>
   <h6 style="color: orange;">&copy Copyright Three Star Media, 2023</h6>
